--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,7 @@
 Package: SMPracticals
 Title: Practicals for use with Davison (2003) Statistical Models
-Version: 1.1-1
-Date: 2006-12-19
-Depends: ellipse
-LazyData: yes
+Version: 1.2
+Date: 2008-02-27
 Author: Anthony Davison <Anthony.Davison@epfl.ch>
 Description: This package contains the datasets and a few functions
  for use with the practicals outlined in Appendix A of the book
@@ -11,6 +9,7 @@ Description: This package contains the datasets and a few functions
  The practicals themselves can be found at
  http://statwww.epfl.ch/davison/SM/
 Maintainer: Anthony Davison <Anthony.Davison@epfl.ch>
+Depends: R (>= 1.8.0), ellipse
 License: GPL version 2 or newer
 URL: http://statwww.epfl.ch/davison/SM/
-Packaged: Tue Dec 19 09:24:52 2006; brazzale
+Packaged: Wed Feb 27 08:52:27 2008; hornik
