--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SMPracticals
 Title: Practicals for use with Davison (2003) Statistical Models
-Version: 1.2
-Date: 2008-02-27
+Version: 1.3
+Date: 2009-02-12
 Author: Anthony Davison <Anthony.Davison@epfl.ch>
 Description: This package contains the datasets and a few functions
  for use with the practicals outlined in Appendix A of the book
@@ -12,4 +12,4 @@ Maintainer: Anthony Davison <Anthony.Davison@epfl.ch>
 Depends: R (>= 1.8.0), ellipse
 License: GPL version 2 or newer
 URL: http://statwww.epfl.ch/davison/SM/
-Packaged: Wed Feb 27 08:52:27 2008; hornik
+Packaged: Thu Feb 12 14:27:48 2009; davison
