--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,19 @@
 Package: SMPracticals
+Version: 1.3-1
+Date: 2009-10-03
 Title: Practicals for use with Davison (2003) Statistical Models
-Version: 1.3
-Date: 2009-02-12
 Author: Anthony Davison <Anthony.Davison@epfl.ch>
-Description: This package contains the datasets and a few functions
- for use with the practicals outlined in Appendix A of the book
- Statistical Models (Davison, 2003, Cambridge University Press).  
- The practicals themselves can be found at
- http://statwww.epfl.ch/davison/SM/
 Maintainer: Anthony Davison <Anthony.Davison@epfl.ch>
 Depends: R (>= 1.8.0), ellipse
-License: GPL version 2 or newer
+Description: This package contains the datasets and a few functions for
+        use with the practicals outlined in Appendix A of the book
+        Statistical Models (Davison, 2003, Cambridge University Press).
+        The practicals themselves can be found at
+        http://statwww.epfl.ch/davison/SM/
+License: GPL (>= 2)
 URL: http://statwww.epfl.ch/davison/SM/
-Packaged: Thu Feb 12 14:27:48 2009; davison
+LazyLoad: yes
+LazyData: yes
+Packaged: 2009-10-12 10:29:26 UTC; brazzale
+Repository: CRAN
+Date/Publication: 2009-10-12 10:41:55
