--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: SMPracticals
-Version: 1.3-1
-Date: 2009-10-03
+Version: 1.4-1
+Date: 2012-03-20
 Title: Practicals for use with Davison (2003) Statistical Models
 Author: Anthony Davison <Anthony.Davison@epfl.ch>
 Maintainer: Anthony Davison <Anthony.Davison@epfl.ch>
-Depends: R (>= 1.8.0), ellipse
+Depends: R (>= 1.14.0), ellipse
+Imports: MASS, nlme, survival
 Description: This package contains the datasets and a few functions for
         use with the practicals outlined in Appendix A of the book
         Statistical Models (Davison, 2003, Cambridge University Press).
@@ -14,6 +15,6 @@ License: GPL (>= 2)
 URL: http://statwww.epfl.ch/davison/SM/
 LazyLoad: yes
 LazyData: yes
-Packaged: 2009-10-12 10:29:26 UTC; brazzale
+Packaged: 2012-03-20 10:35:29 UTC; brazzale
 Repository: CRAN
-Date/Publication: 2009-10-12 10:41:55
+Date/Publication: 2012-03-20 11:53:01
